update tampilan admin, add crud dataset

--- a/public/assets/css/welcome.css
+++ b/public/assets/css/welcome.css
@@ -57,6 +57,10 @@ a:hover {
   text-transform: uppercase;
 }
 
+.border-green {
+  border-color: var(--color-green);
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: "Jost", sans-serif;
 }
