--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2,10 +2,11 @@
 
 :root {
     --color-green : #00A9A4;
+    --color-green-dark : #05847f;
     --color-blue : #00A4DA;
     --color-light : #ECEFF7;
     --color-white : #FDFCFF;
-
+    --color-danger : #DC3545;
     
 }
 
@@ -45,12 +46,28 @@
     background-color: var(--color-white);
 }
 
-.btn {
+.btn-login {
   color: var(--color-light);
 }
 
-.btn:hover {
+.btn-login:hover {
   background: var(--color-green)
+}
+
+.btn-success {
+  background-color: var(--color-green);
+}
+
+.btn-success:hover {
+  background-color: var(--color-green-dark);
+}
+
+.btn-success:active {
+  background-color: var(--color-green-dark);
+}
+
+.color-danger {
+  color: var(--color-danger);
 }
 
 /*--------------------------------------------------------------
@@ -77,6 +94,8 @@ a:hover {
 }
 
 textarea:focus,
+select:focus,
+.form-select:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
 input[type="datetime"]:focus,
@@ -97,6 +116,9 @@ input[type="color"]:focus,
   outline: 0 none;
 }
 
+.nilai-k input::placeholder {
+  font: 100;
+}
 /*--------------------------------------------------------------
 # Main
 --------------------------------------------------------------*/
@@ -728,20 +750,16 @@ input[type="color"]:focus,
   margin-left: 95px;
 }
 
-/* Recent Sales */
-.dashboard .recent-sales {
-  font-size: 14px;
-}
-.dashboard .recent-sales .table thead {
+.table thead {
   background: #f6f6fe;
 }
-.dashboard .recent-sales .table thead th {
+.table thead th {
   border: 0;
 }
-.dashboard .recent-sales .dataTable-top {
+.dataTable-top {
   padding: 0 0 10px 0;
 }
-.dashboard .recent-sales .dataTable-bottom {
+.dataTable-bottom {
   padding: 10px 0 0 0;
 }
 
